2009-07-16  Jorge Gonzalez  <jorgegonz@artica.es>

	* godmode/servers/manage_recontask_form.php: Changed sql query to
	  remove "All" os from the recon task selection form.

2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* Changelog: date error in last change.

2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/db/db_sanity.php: remove "cambio" column in query, this column use
	in old version of pandora (read pandoradb_migrate_v2.x_to_v3.0.sql line 20).
	Fixes: #2810974

2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/manage_config_remote.php: fix name of colums in query.

2009-07-09  Manuel Arostegui <manuel@todo-linux.com>

	* pandora_console.spec: Removed unnecessary dependency.

2009-07-08  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

2009-07-08  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_fsgraph.php: Use the user defined date format in
	  module and combined charts.

	* operation/agentes/estado_ultimopaquete.php: Fixed the chart URL.

	* operation/agentes/stat_win.php: Show the agent name in the window
	  title.

2009-07-06  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

2009-07-06  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	* translation.

	* include/languages/index.pot: Updated po template.

2009-07-01  Sancho Lerena  <slerena@artica.es>

	* include/functions_config.php: Fixed setup problem for fontpath token.
	
	* godmode/setup/setup.php, setup_visuals.php: Moved some items to other
	file (fontpath, flashgraph and agent graph options).
	
	* godmode/db/db_main.php: Bigger image.
	
2009-07-01  Ramon Novoa  <rnovoa@artica.es>
