@@ -1,3 +1,9 @@
+2009-07-15  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions_modules.php: fix bug that the function
+	copy_agent_module_to_agent didn't copy the modules what was previus
+	delete.
+
 2009-07-16  Jorge Gonzalez  <jorgegonz@artica.es>
 
 	* godmode/servers/manage_recontask_form.php: Changed sql query to
